@@ -28,3 +28,5 @@ is running. The upload of the actual changeset starts after this, the processes 
 git-annex is great and revolutionized my file organization and backup structure (if they were even existing before)
 
 [[!meta title="gcrypt special remotes should support rsync:// and perhaps also sftp://"]]
+
+> [[done]] --[[Joey]]
