@@ -15,6 +15,9 @@ git-annex (8.20210224) UNRELEASED; urgency=medium
     (Such a conversion will still happen when importing from a remote
     an old git-annex exported such a tree to before; export the tree
     with the new git-annex before importing to avoid that.)
+  * Added support for git-remote-gcrypt's rsync URIs, which access a remote
+    using rsync over ssh, and which git pushes to much more efficiently
+    than ssh urls.
   * Fix support for local gcrypt repositories with a space in their URI.
 
  -- Joey Hess <id@joeyh.name>  Wed, 24 Feb 2021 13:18:38 -0400
